--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "an-illusion",
   "author": "Xavier Bruhiere <xavier.bruhiere@gmail.com>",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Intuition API emulation and documentation.",
   "repository": "https://github.com/intuition-io/illusion",
   "keywords": [
@@ -14,8 +14,17 @@
   "bin": {
     "illusion": "./bin/illusion.js"
   },
+  "scripts": {
+    "start": "node bin/illusion.js fakeit --verbose --datapoints 1,5,100,1000",
+    "lint": "nodelint bin/illusion.js src/*.js",
+    "coverage": "istanbul cover _mocha -- -R spec test/cli.js",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "test": "mocha --watch"
+  },
+  "engines": {
+    "node": ">=0.10"
+  },
   "dependencies": {
-    "bunyan": "^1.0.1",
     "chalk": "^0.5.1",
     "cli-table": "^0.3.0",
     "commander": "~2.3.0",
@@ -27,20 +36,17 @@
     "semver": "^3.0.1",
     "update-notifier": "^0.2.1"
   },
-  "scripts": {
-    "start": "node bin/illusion.js fakeit",
-    "lint": "nodelint bin/illusion.js src/*.js",
-    "coverage": "istanbul cover _mocha -- -R spec test/cli.js",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "test": "mocha --watch"
-  },
-  "engines": {
-    "node": ">=0.10"
-  },
   "devDependencies": {
     "coveralls": "^2.11.1",
+    "gulp": "^3.8.8",
+    "gulp-istanbul": "^0.3.1",
+    "gulp-jscs": "^1.1.2",
+    "gulp-jshint": "^1.8.5",
+    "gulp-mocha": "^1.1.0",
     "istanbul": "^0.3.2",
+    "jscs": "^1.6.2",
     "jshint": "^2.5.5",
+    "jshint-stylish": "^1.0.0",
     "mocha": "^1.21.4",
     "mocha-lcov-reporter": "0.0.1",
     "nodelint": "^0.6.2",
