--- a/shippable.yml
+++ b/shippable.yml
@@ -20,9 +20,9 @@ script:
   - ./node_modules/.bin/mocha
 
 # Tell istanbul to generate a coverage report
-# FIXME- cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 after_success:
   - ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
+  - /bin/cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 notifications:
   mail:
